<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.projet1_crusson.MainActivity">

    <item
        android:id="@+id/menu_act1"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_act1"/>
    <item
        android:id="@+id/menu_act2"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_act2"/>
    <item
        android:id="@+id/menu_act3"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_act3"/>
    <item
        android:id="@+id/menu_act4"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_act4"/>
    <item
        android:id="@+id/menu_act5"
        app:showAsAction="ifRoom|withText"
        android:title="@string/menu_act5"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />


</menu>
